--- a/src/css/nav_bar.css
+++ b/src/css/nav_bar.css
@@ -8,6 +8,7 @@
 }
 
 .nav-link {
+  justify-content: center;
   padding: 10px;
   font-size: 25px;
   color: var(--detail-font-color);
@@ -16,6 +17,7 @@
 
 .nav-link:hover{
   font-weight: bold;
+  color: var(--detail-font-color);
 }
 
 .nav-button {
@@ -28,12 +30,14 @@
 }
 
 .nav-bar {
+  top:0;
   display: flex;
   justify-content: center;
-  width: calc(100vw - 10px);
+  width: calc(100vw);
   height: 50px;
   padding: 5px;
   position: fixed;
+  z-index: 9999;
   background-color: var(--detail-color);
   transition: background 1s;
 
